tests/sksl/errors/DuplicateFunction.glsl
### Compilation failed:

error: 2: duplicate definition of void main()
1 error
